ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: mydice.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dice-service
            port:
              number: 8000
